# hoyo-assistant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build.yml  test_run.yml
scripts/: smoke_test.py
src/hoyo_assistant/: __init__.py  cli.py  server.py
src/hoyo_assistant/core/: __init__.py  account.py  captcha.py  config.py  config_schema.py  constants.py  error.py  i18n.py  loghelper.py  login.py  models.py  push.py  request.py  setting.py  setting_schema.py  tools.py
src/hoyo_assistant/locales/: en_US.json  zh_CN.json
src/hoyo_assistant/runner/: __init__.py  multi_account.py  single_account.py
src/hoyo_assistant/tasks/: __init__.py
src/hoyo_assistant/tasks/base/: __init__.py
src/hoyo_assistant/tasks/chinese/: __init__.py  cloud_games.py  game_signin.py
src/hoyo_assistant/tasks/cn/: __init__.py  cloud_games.py  game_signin.py
src/hoyo_assistant/tasks/community/: __init__.py  competition_logic.py  miyoushe.py
src/hoyo_assistant/tasks/os/: __init__.py  cloud_games.py  game_signin.py
src/hoyo_assistant/tasks/overseas/: __init__.py  cloud_games.py  game_signin.py
src/hoyo_assistant/tasks/web/: __init__.py  activities.py
tests/: conftest.py  run_test.py  smoke_test.py  test_constants.py  test_i18n.py  test_request.py  test_server_settings.py
